# ms5837-driver

./: .gitignore  CHANGELOG.txt  Cargo.toml  README.md  build.rs
.clusterfuzzlite/: Dockerfile  build.sh
.devcontainer/: devcontainer.json
.github/workflows/: cflite_batch.yml  cflite_pr.yml
example/: Cargo.toml
example/.cargo/: config.toml
example/src/: lib.rs
example/tests/: integration.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: init.rs  read.rs
src/: crc4.c  lib.rs
