[package]
name = "ms5837"
version = "0.2.1"
edition = "2021"
description = "A driver for the MS5837 pressure/temperature sensor from Texas Instruments."
license = "MIT"
authors = ["Nathaniel Brough"]
repository = "https://github.com/silvergasp/ms5837-driver"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[package.metadata.commits]
defaults = true

[dependencies]
embedded-hal = "1.0.0"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
embedded-hal-mock = "0.9.0"
